# poppy-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
glad/: glad.c
imgui/examples/example_glfw_vulkan/: CMakeLists.txt
imgui/glad/: glad.h
resources/shader/: forward.frag  forward.vert
src/: main.cpp  opengl.h  transform.cpp  transform.h  types.h
src/editor/: editor.cpp  editor.h
src/entities/: entt_manager.cpp
src/entt/: entt_manager.cpp  entt_manager.h
src/entt/components/: comp_mesh_render.cpp  comp_mesh_render.h  comp_transform.cpp  comp_transform.h  mesh_renderer.cpp  mesh_renderer.h
src/renderer/: hardware_resources.cpp  hardware_resources.h  mesh_renderer.cpp  mesh_renderer.h  model.cpp  model.h  obj_loader.cpp  obj_loader.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h
src/util/: error.h
